# voicemeeter-mcp-server

./: .bandit  .flake8  .gitignore  DEVELOPMENT.md  LICENSE  MARKETPLACE_SUBMISSION.md  README.md  act.bat  branch-protection.json  create_logo.py  diagnose.py  fix_unicode.py  install.py  llms-install.md  prepare_repo.py  pyproject.toml  test_mcp_simple.py  troubleshoot.py
.github/workflows/: auto-merge-dev-to-main.yml  ci.yml
.organization/: FINAL_SUMMARY.md  generate_audio_samples.py  test_live.py
.organization/audio_samples/: README.md
presets/: example_preset.xml
src/voicemeeter_mcp_server/: __init__.py  main.py  preset_manager.py  server.py  voicemeeter_api.py
tests/: test_main.py  test_preset_manager.py  test_server.py  test_voicemeeter_api.py
